# VGTracker

./: CMakeLists.txt  conf.ini  configurator.cpp  configurator.h  dbaccess.cpp  dbaccess.h  enums.h  errordialog.cpp  errordialog.h  errordialog.ui  main.cpp  vgtracker.cpp  vgtracker.h  vgtracker.ui  waddplatform.cpp  waddplatform.h  waddplatform.ui
